# libatasmart-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  devenv.nix  devenv.yaml
.github/workflows/: ci.yml
examples/: read_smart.rs  self_test.rs  skdump.rs  test_blob.rs
src/: error.rs  lib.rs  utils.rs
src/disk/: detect.rs  device.rs  identify_data.rs  mod.rs  smart_data.rs
src/ffi/: ata.rs  commands.rs  ioctl.rs  mod.rs  scsi.rs
src/identify/: mod.rs  parse.rs
src/smart/: attributes.rs  blob.rs  data.rs  mod.rs  parse.rs  statistics.rs
src/types/: constants.rs  enums.rs  mod.rs  structs.rs  units.rs
tests/: integration.rs
