[package]
name = "libatasmart"
version = "0.1.0"
edition = "2021"
authors = ["Chikage0o0 <chikage@939.me>"]
license = "MIT OR Apache-2.0"
description = "ATA S.M.A.R.T. 硬盘健康监控库 (Rust 实现)"
repository = "https://github.com/Chikage0o0/libatasmart-rs"
keywords = ["smart", "ata", "disk", "health", "monitoring"]
categories = ["hardware-support", "os::linux-apis"]

[dependencies]
libc = "0.2"
thiserror = "2.0.17"
regex = "1.10"

[dev-dependencies]
# 用于集成测试

[[example]]
name = "skdump"
path = "examples/skdump.rs"

[lib]
name = "atasmart"
path = "src/lib.rs"
